# gfxreconstruct

./: USAGE_android.md  USAGE_desktop.md
framework/application/: android_window.cpp  android_window.h  xcb_application.cpp  xcb_application.h  xcb_window.cpp  xcb_window.h
framework/decode/: api_decoder.h  compression_converter.cpp  compression_converter.h  file_processor.cpp  file_processor.h  pointer_decoder.h  vulkan_decoder_base.cpp  vulkan_decoder_base.h
framework/encode/: capture_settings.cpp  capture_settings.h  parameter_encoder.h  struct_pointer_encoder.h  trace_manager.cpp  trace_manager.h
framework/format/: api_call_id.h  format.h  platform_types.h
framework/util/: logging.cpp  page_guard_manager.cpp  page_guard_manager.h  xcb_loader.cpp  xcb_loader.h
layer/: CMakeLists.txt  custom_vulkan_api_call_encoders.cpp  d3d12.def  d3d12_ms.lib  dll_main_d3d12.cpp  dll_main_dx12.cpp  dll_main_dxgi.cpp  dx12_capture.def  dx12_dispatch_table.h  dxgi.def  dxgi_ms.lib
tools/replay/: CMakeLists.txt  desktop_main.cpp  dx12_consumer.h  dx12_decoder.cpp  dx12_decoder.h  dx12_struct_decoders.h
